--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                     <a class="secondLevel" id="navbarSecondtLevel6_6" href="./pages/calendar.html">DatePicker</a>
                     <a class="secondLevel" id="navbarSecondtLevel6_7" href="./pages/tags.html">Tags</a>
                     <a class="secondLevel" id="navbarSecondtLevel6_8" href="./pages/input.html">Input</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_9" href="./pages/segmentedControl.html">SegmentedControl</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_10" href="./pages/toggle.html">Toggle</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_11" href="./pages/textarea.html">Textarea</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_12" href="./pages/tooltip.html">Tooltip</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_13" href="./pages/select.html">Select</a>
                 </div>
                 <a class="firstLevel" id="navbarFirstLevel7" href="./pages/images.html">Изображения</a>
                 <a class="firstLevel" id="navbarFirstLevel8" href="./pages/loading.html">Загрузка контена</a>
