--- a/pages/colors.html
+++ b/pages/colors.html
@@ -29,6 +29,11 @@
                     <a class="secondLevel" id="navbarSecondtLevel6_6" href="./calendar.html">DatePicker</a>
                     <a class="secondLevel" id="navbarSecondtLevel6_7" href="./tags.html">Tags</a>
                     <a class="secondLevel" id="navbarSecondtLevel6_8" href="./input.html">Input</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_9" href="./segmentedControl.html">SegmentedControl</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_10" href="./toggle.html">Toggle</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_11" href="./textarea.html">Textarea</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_12" href="./tooltip.html">Tooltip</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_13" href="./select.html">Select</a>
                 </div>  
                 <a class="firstLevel" id="navbarFirstLevel7" href="./images.html">Изображения</a>
                 <a class="firstLevel" id="navbarFirstLevel8" href="./loading.html">Загрузка контена</a>
@@ -48,7 +53,7 @@
                     <h1>Основные цвета</h1>
                     <div class="manyTexts">
                         <p>Основные цвета позволяют быстро распознавать элементы и компоненты интерфейса. Этими цветами являются - синий и бирюзовый, которые создают выразительные визуальные акценты и привлекают внимание пользователей.</p>
-                        <p>Активно используйте основные цвета в различных элементах интерфейса<br>не только для повышения видимость интерактивных компонентов,<br>но и для создания позитивного визуального восприятия для формирования положительного пользовательского опыта. Старайтесь внедрять синие<br>и бирюзовые цвета в том числе и для повышения узнаваемость бренда.</p>
+                        <p>Активно используйте основные цвета в различных элементах интерфейса не только для повышения видимость интерактивных компонентов, но и для создания позитивного визуального восприятия для формирования положительного пользовательского опыта. Старайтесь внедрять синие и бирюзовые цвета в том числе и для повышения узнаваемость бренда.</p>
                     </div>
                     <div class="colorWrapper">
                         <div class="colorTopWrapper">
@@ -96,7 +101,7 @@
                     <div class="colorWrapper">
                         <div class="colorTopWrapper">
                             <p class="pBold">Aqua</p>
-                            <p>Бирюзовый цвет — вспомогательный цвет основной палитры, используйте его для кнопок и призывов к действию.</p>
+                            <p>Бирюзовый цвет — вспомогательный цвет основной палитры, используйте его<br>для кнопок и призывов к действию.</p>
                         </div>
                         <div class="colorPaletteWrapper">
                             <div class="colorPallete">
@@ -223,26 +228,27 @@
                     </div>
                     <h3>Типографика</h3>
                     <div class="manyTexts">
-                        <P>Используйте светло-серый оттенок <b>Neural 60</b> для:</P>
+                        <P>Используйте светло-серый оттенок <b>Neutral 60</b> для:</P>
                         <ul class="ulWithDashes">
                             <li>элементов, которые временно недоступны или неактивны;</li>
+                            <li>подписей изображений;</li>
                             <li>создания читаемости и подчеркивания текстовой информации (например,<br>для второстепенной информации).</li>
                         </ul>
                         <p>Это помогает пользователю понимать, что определенные действия в данный момент недоступны, и создает четкую разницу между активными и неактивными элементами. Светло-серые цвета обеспечивают высокий контраст с темными шрифтами, что делает текст более разборчивым и удобным для восприятия.</p>
-                        <p>При этом темно-серый цвет <b>Neural 100</b> используется для создания таких типографических решений, как основной текст и заголовки.</p>
-                        <p>Для иконок следует применять <b>Neural 80</b>. Они должны быть менее контрастными, чем текст. Потому что пользователи должны без труда прочитать текст, быстро просматривая иконки.</p>
+                        <p>При этом темно-серый цвет <b>Neutral 100</b> используется для создания таких типографических решений, как основной текст и заголовки.</p>
+                        <p>Для иконок следует применять <b>Neutral 70</b>. Они должны быть менее контрастными, чем текст. Потому что пользователи должны без труда прочитать текст, быстро просматривая иконки.</p>
                         <div class="marginTop8 beforeh3">
-                            <img src="../img/colors1.png" />
+                            <img src="../img/colors1.svg" />
                         </div>
                         <h3>Фоны</h3>
                         <div class="manyTexts">
-                            <p>Основным цветом фона является белый Neural white, делая дизайн более легким для восприятия.</p>
-                            <p>Фоны в компонентах и цвета плашек должны бфть темнее фона. Светло-серые оттенки Neural 20 могут создавать приятный и чистый вид, освежая дизайн.</p>
-                            <p>Для обводок и разделителей используйте цвет Neural 50, который  контрастирует с фоном и темнее фона в компонентах.</p>
-                            <p>Темные серые фоны, с другой стороны, могут придавать компонентам глубину и контраст, выделяя контент и делая его более заметным.</p>
+                            <p>Основным цветом фона является белый <b>Neutral white</b>, делая дизайн более легким для восприятия.</p>
+                            <p>Фоны в компонентах и цвета плашек должны быть темнее фона. Светло-серые оттенки <b>Neutral 20</b> могут создавать приятный и чистый вид, освежая дизайн.</p>
+                            <p>Для обводок и разделителей используйте цвет <b>Neutral 50 или Neutral 60</b>, который  контрастирует с фоном и темнее фона в компонентах.</p>
+                            <p>Темные серые фоны, с другой стороны, могут придавать компонентам глубину<br>и контраст, выделяя контент и делая его более заметным.</p>
                         </div>
                         <div class="marginTop8 beforeh3">
-                            <img src="../img/colors2.png" />
+                            <img src="../img/colors2.svg" />
                         </div>
                         <h3>Визуальная иерархия <br>с использованием нейтральных тонов</h3>
                         <p>Используйте более светлые нейтральные оттенки для элементов на поверхности, на которых хотите акцентировать внимание пользователя, чтобы обозначить основные элементы интерфейса и создать понятную иерархию. Это поможет показать пользователю, на что нужно обратить внимание и определить степень важности различных элементов дизайна.                        </p>
@@ -256,7 +262,7 @@
                     <h2>Цвета состояний</h2>
                     <div class="manyTexts beforeh3">
                         <p>Цвета состояний служат стандартными цветами обратной связи и помогают пользователям понимать текущее состояние интерфейса. Они сочетаются<br>с основными цветами и палитрой серых и используются как стандартные цвета обратной связи, добавляя контекст и эмоциональную нагрузку к различным элементам интерфейса.</p>
-                        <p>Цвета состояний способствуют ясной коммуникации с пользователями и повышают удобство использования интерфейса. Применяйте их для вывода вспомогательных элементов.</p>
+                        <p>Цвета состояний способствуют ясной коммуникации с пользователями и повышают удобство использования интерфейса. Применяйте их для вывода<br>вспомогательных элементов.</p>
                     </div>
                     <h3>Положительный и негативный контекст</h3>
                     <div class="colorWrapper paddingTop0">
@@ -289,7 +295,7 @@
                     <div class="colorWrapper paddingTop0">
                         <div class="colorTopWrapper">
                             <p class="pBold">Error</p>
-                            <p>Отрицательный (красный) цвет используется для выделения ошибок или отклонений от ожидаемого результата.</p>
+                            <p>Отрицательный (красный) цвет используется для выделения ошибок<br>или отклонений от ожидаемого результата.</p>
                         </div>
                         <div class="colorPaletteWrapper">
                             <div class="colorPallete">
@@ -317,7 +323,7 @@
                     <div class="colorWrapper paddingTop0">
                         <div class="colorTopWrapper">
                             <p class="pBold">Attention</p>
-                            <p>Предупреждающий (желтый) цвет часто используется для предупреждений или уведомлений, которые не являются критическими, но требуют внимания пользователя.</p>
+                            <p>Предупреждающий (желтый) цвет часто используется для предупреждений<br>или уведомлений, которые не являются критическими, но требуют<br>внимания пользователя.</p>
                         </div>
                         <div class="colorPaletteWrapper">
                             <div class="colorPallete">
