--- a/pages/images.html
+++ b/pages/images.html
@@ -29,6 +29,11 @@
                     <a class="secondLevel" id="navbarSecondtLevel6_6" href="./calendar.html">DatePicker</a>
                     <a class="secondLevel" id="navbarSecondtLevel6_7" href="./tags.html">Tags</a>
                     <a class="secondLevel" id="navbarSecondtLevel6_8" href="./input.html">Input</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_9" href="./segmentedControl.html">SegmentedControl</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_10" href="./toggle.html">Toggle</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_11" href="./textarea.html">Textarea</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_12" href="./tooltip.html">Tooltip</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_13" href="./select.html">Select</a>
                 </div>  
                 <a class="firstLevel activeSideNav" id="navbarFirstLevel7" href="./images.html">Изображения</a>
                 <a class="firstLevel" id="navbarFirstLevel8" href="./loading.html">Загрузка контена</a>
@@ -60,7 +65,7 @@
                         <p>Фотографии не должны быть с брендами, официально незаявленными<br>как партнеры.</p>
                         <img src="../img/images_3.png"> 
                     </div>
-                    <div class="imagesPrinciplesWrapper">
+                    <div class="imagesPrinciplesWrapper zeroPadding">
                         <p>Фотографии не должны быть с искаженными углами
                             съемки.</p>
                         <img src="../img/images_4.png"> 
@@ -69,18 +74,21 @@
                 <div class="contentBlock">
                     <div class="manyTexts">
                         <h2>Формат изображения</h2>
-                        <P>Для веб-приложений используется много разных форматов изображений.<br>Поэтому важно пользоваться такими форматами правильно.<br>Рекомендуется использовать три формата:</P>
+                        <div class="manyTexts paddingBot20">
+                            <P>Для веб-приложений используется много разных форматов изображений.<br>Поэтому важно пользоваться такими форматами правильно.</P>
+                            <p>Рекомендуется использовать три формата:</p>
+                        </div>
                         <ul class="aboutList">
                             <li>
-                                <p class="aboutListHeader">webp.</p>
+                                <p class="aboutListHeader">WEBP</p>
                                 <p class="aboutListText"> Один из новейших форматов. Его лучше всего использовать<br>для растровых изображений. В таком формате получается идеальное соотношения веса изображения к его качеству. Однако есть небольшая вероятность, что изображение будет открыто в старом браузере,<br>который не поддерживает данный формат.</p>
                             </li>
                             <li>
-                                <p class="aboutListHeader">png.</p>
+                                <p class="aboutListHeader">PNG</p>
                                 <p class="aboutListText">Его можно использоваться также, как и webp, просто второй более новый и оптимизированный. Скорее всего, при использовании такого формата вы<br>не встретитесь с проблемами старых браузеров, поскольку png формат один из самых старых форматов изображений.</p>
                             </li>
                             <li>
-                                <p class="aboutListHeader">svg.</p>
+                                <p class="aboutListHeader">SVG</p>
                                 <p class="aboutListText">Векторный формат. Самые простые изображения, иконки, логотип: это все лучше делать в векторном формате. Иными словами, рекомендуется выбирать векторный формат взамен растрового, если есть такая возможность.</p>
                             </li>
                         </ul>
