--- a/pages/layout.html
+++ b/pages/layout.html
@@ -29,6 +29,11 @@
                     <a class="secondLevel" id="navbarSecondtLevel6_6" href="./calendar.html">DatePicker</a>
                     <a class="secondLevel" id="navbarSecondtLevel6_7" href="./tags.html">Tags</a>
                     <a class="secondLevel" id="navbarSecondtLevel6_8" href="./input.html">Input</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_9" href="./segmentedControl.html">SegmentedControl</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_10" href="./toggle.html">Toggle</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_11" href="./textarea.html">Textarea</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_12" href="./tooltip.html">Tooltip</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_13" href="./select.html">Select</a>
                 </div>  
                 <a class="firstLevel" id="navbarFirstLevel7" href="./images.html">Изображения</a>
                 <a class="firstLevel" id="navbarFirstLevel8" href="./loading.html">Загрузка контена</a>
@@ -72,18 +77,18 @@
                         <p>Используйте модуль 8 пикселей. Это означает, что все размеры в интерфейсы должны быть кратны восьми. При таком модуле, получается достаточно гибкий интерфейс, чтобы можно было органично выбирать все размеры в пикселях,<br>при этом не сильно путаясь во всех числах.</p>
                         <p>Используйте сетку из 12 колонок. Также допускается использование нескольких колонок. </p>
                     </div>
-                    <div class="exampleMenuWrapper paddingBot28">
+                    <div class="exampleMenuWrapper paddingBot24 paddingTop24">
                         <img src="../img/layout_module1.svg" />
                     </div>
                     <div class="manyTexts">
                         <p>Тем не менее, необязательно все величины обязательно должны быть кратны 8.</p>
                         <p>Было введено понятие полмодуля (4px) —  его можно использовать в размерах<br>до 50 пикселей. То есть, возможно использование, например, расстояний, которые будут равны 2.5m или 1.5m.</p>
                     </div>
-                    <div class="exampleMenuWrapper paddingBot28">
+                    <div class="exampleMenuWrapper paddingBot24 paddingTop24">
                         <img src="../img/layout_module2.svg" />
                     </div>
                     <p>Также возможно использование четверти модуля (2px) при выборе шрифта<br>или отступов, но рекомендуется использовать не меньше половины модуля.</p>
-                    <div class="exampleMenuWrapper paddingBot28">
+                    <div class="exampleMenuWrapper paddingTop24">
                         <img src="../img/layout_module3.svg" />
                     </div>
                 </div>
