--- a/pages/typography.html
+++ b/pages/typography.html
@@ -29,6 +29,11 @@
                     <a class="secondLevel" id="navbarSecondtLevel6_6" href="./calendar.html">DatePicker</a>
                     <a class="secondLevel" id="navbarSecondtLevel6_7" href="./tags.html">Tags</a>
                     <a class="secondLevel" id="navbarSecondtLevel6_8" href="./input.html">Input</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_9" href="./segmentedControl.html">SegmentedControl</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_10" href="./toggle.html">Toggle</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_11" href="./textarea.html">Textarea</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_12" href="./tooltip.html">Tooltip</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_13" href="./select.html">Select</a>
                 </div>  
                 <a class="firstLevel" id="navbarFirstLevel7" href="./images.html">Изображения</a>
                 <a class="firstLevel" id="navbarFirstLevel8" href="./loading.html">Загрузка контена</a>
@@ -49,13 +54,13 @@
                     </div>
                     <div class="manyTexts paddingBottom">
                         <P>Этот шрифт используются в 3 основных начертания:</P>
-                        <ul class="ulWithDashes">
+                        <ul class="ulWithDashes marginBot20" >
                             <li>Bold — для заголовков;</li>
                             <li>Medium — для акцентного шрифта;</li>
                             <li>Book  — для набора основного текста.</li>
                         </ul>
                     </div>
-                    <div class="tabcontent typoMenu mainTypoWeight" style="display: flex;" >
+                    <div class="tabcontent typoMenu mainTypoWeight fullBorder" style="display: flex;" >
                         <div class="mainTypoWrapper mainTypoExamples ">
                             <div class="leftWrapper">
                                 <p>Font</p>
@@ -140,7 +145,7 @@
                 </div>
 
                 <div class="contentBlock">
-                    <h2 class="beforeh3">Отступы различных элементов</h2>
+                    <h2 class="beforeh3 zeroPadding ">Отступы различных элементов<br>десктопной версии</h2>
                     <h3>Заголовок</h3>
                     <div class="manyTexts">
                         <p>Отступы при заголовках разного уровня рассчитываются относительно размера текста в пикселях.</p>
@@ -150,44 +155,44 @@
                         <img src="../img/typoHeaders.svg" />
                     </div>
                     <h3>Текст</h3>
-                    <p>Расстояние между абзацами с текстом составляет 16 пикселей.
+                    <p>Расстояние между абзацами с текстом составляет 16 пикселей.<br>
                         Расстояние между буквами и словами — как в настройках шрифта.</p>
-                    <div class="exampleMenuWrapper paddingBot24">
+                    <div class="exampleMenuWrapper paddingBot24 paddingTop28">
                         <img src="../img/typoText.svg" />
                     </div>
                     <p class="beforeh3">Основные текстовые блоки набираются шрифтом начертания “book”. Чтобы виделить информацию используйте начертания ”bold” и “medium”. Старайтесь выделать частично и только минимальную информацию, избегайте выделения целых блоков.</p>
                     <h3>Списки</h3>
                     <div class="manyTexts">
                         <p>Списки состоят из связанного контента, сгруппированного и организованного вертикально. Чтобы показать вложенность элементов, делайте смещение кратное модулю.</p>
-                        <p>Для формирования маркерованного списка при использования списка, который начинается с числа или буквы без скобки, начинайте предложение с заглавной буквы и заканчиваете точкой. Если список начинается с числа со скобкой, то далее следует использовать слова с прописной буквы и использовать точку-запятую для перечисления.</p>
+                        <p>Для формирования маркерованного списка при использования списка, который начинается с числа или буквы без скобки, начинайте предложение с заглавной буквы и заканчиваете точкой. Если список начинается с числа со скобкой, то далее следует использовать слова с прописной буквы и использовать точку-запятую<br>для перечисления.</p>
                         <p>Если список предполагает следующее членение текста, то в конце него становится двоеточие. Если последующего членения не будет, то ставится точка.</p>
                     </div>
                     <div class="exampleMenuWrapper">
                         <img src="../img/typoListMarked.svg" />
                     </div>
-                    <p class="paddingTop28">Для формирования немаркерованного списка используйте списки с тире в виде маркера и начинайте с прописной буквы. </p>
-                    <div class="exampleMenuWrapper">
+                    <p class="paddingTop24">Для формирования немаркерованного списка используйте списки с тире в виде маркера и начинайте с прописной буквы. </p>
+                    <div class="exampleMenuWrapper paddingTop24">
                         <img src="../img/typoListUnmarked.svg" />
                     </div>
                 </div>
 
-                <div class="contentBlock">
-                    <h2 class="beforeh3">Оформление текста</h2>
+                <div class="contentBlock ">
+                    <h2 class="beforeh3 zeroPadding">Оформление текста</h2>
                     <h3>Выравнивание текста</h3>
                     <div class="manyTexts">
                         <p>При выравнивании текста по горизонтали необходимо придерживаться выравнивания по левому краю.</p>
                         <p>По вертикали выравнивайте по базовой линии.</p>
                     </div>
-                    <div class="exampleMenuWrapper beforeh3">
+                    <div class="exampleMenuWrapper beforeh3  paddingTop24">
                         <img src="../img/typoAlign.svg" />
                     </div>
 
                     <h3>Знаки пунктуации</h3>
                     <div class="manyTexts">
-                        <p>Следите, чтобы знаки пунктуации выступали за границу полей текста. Таким образом, текст выглядит выровненным.</p>
-                        <p>Кавычки и скобки не отбиваются пробелом от заключённых в них слов. Знаки препинания от скобок и кавычек никогда не должны быть отбиты.</p>
+                        <p>Следите, чтобы знаки пунктуации выступали за границу полей текста.<br>Таким образом, текст выглядит выровненным.</p>
+                        <p>Кавычки и скобки не отбиваются пробелом от заключённых в них слов.<br>Знаки препинания от скобок и кавычек никогда не должны быть отбиты.</p>
                     </div>
-                    <div class="exampleMenuWrapper beforeh3">
+                    <div class="exampleMenuWrapper beforeh3 paddingTop24">
                         <img src="../img/typoPunctuation.svg" />
                     </div>
 
@@ -195,7 +200,7 @@
                     <div class="manyTexts">
                         <p>Правильное и последовательное использование кавычек помогает читателю легче ориентироваться в тексте и понять авторскую идею. Их главная задача – выделять цитаты и прямую речь.</p>
                         <p>Существуют следующие кавычки:</p>
-                        <ul>
+                        <ul  class="ulWithDashes">
                             <li>одиночные (левая и правая): « и », используются в русскоязычных текстах;</li>
                             <li>двойные (левая и правая): “ и ”, в русском языке чаще всего используются как дополнительные, то есть те, которые стоят внутри других кавычек.</li>
                         </ul>
@@ -210,22 +215,23 @@
                     <p class="pBold">Тире</p>
                     <div class="manyTexts">
                         <p>Есть два вида тире:</p>
-                        <ul>
+                        <ul class="ulWithDashes">
                             <li>пунктуационное (длинное ­―), используется во всех пунктуационных случаях как знак препинания, выделяется пробелами;</li>
                             <li>цифровое (короткое –), которое используется при обозначении диапазона дат или цифр, пробелами не выделяется.</li>
                         </ul>
                     </div>
                     <div class="typoExampleWrapper beforeh3">
                         <div class="manyTexts flexWow">
-                            <p>Летнее — Зимено</p>
-                            <p>11:20-11:45</p>
+                            <p>Красноярск — Тула</p>
+                            <p>21-27 января</p>
                         </div>
                     </div>
 
                     <h3>Числа</h3>
                     <p>При отображении числа разряды отделяются пробелом каждые три знака. Дробная часть отделяется запятой.</p>
                     <div class="typoExampleWrapper beforeh3">
-                        <div class="manyTexts">
+                        <div class="manyTexts flexWow">
+                            <p>45 848, 25</p>
                             <p>1 000 000,00</p>
                         </div>
                     </div>
@@ -233,9 +239,8 @@
                     <h3>Телефонные номера</h3>
                     <p>Используейте написание телефонного номера с указанием кода страны. Цифры отделяются согласно стандарту страны.</p>
                     <div class="typoExampleWrapper beforeh3">
-                        <div class="manyTexts withLine">
-                            <p style="padding-bottom: 8px;">+X (XXX) XXX-XX-XX</p>
-                            <div class="aquaLine"></div>
+                        <div class="manyTexts flexWow">
+                            <p>Для России</p>
                             <p>+7 (911) 458-48-85</p>
                         </div>
                     </div>
@@ -244,8 +249,8 @@
                     <p>Знак валюты отображается после числа (справа). В зарубежном варианте — до числа (слева).</p>
                     <div class="typoExampleWrapper">
                         <div class="manyTexts flexWow">
-                            <p>85 485 ₽</p>
-                            <p>$ 85 485 </p>
+                            <p>85 485 500 ₽</p>
+                            <p>$ 85 485 500</p>
                         </div>
                     </div>
                 </div>
