--- a/pages/textarea.html
+++ b/pages/textarea.html
@@ -159,7 +159,7 @@
                         <div class="inputsStatesWrapper textAreaStatesWrapper">
                             <p class="incorrectInputsStyle">Город</p>
                             <div class="myTextarea">
-                                <textarea id="redInput" rows="3" cols="38" name="text" placeholder="Подсказка" readonly>Текст</textarea>
+                                <textarea id="redInput2" rows="3" cols="38" name="text" placeholder="Подсказка" readonly>Текст</textarea>
                                 <div class="incorrectInputCaption">
                                     <img src="../img/crossSmall.svg">
                                     <p class="incorrect">Неверный город</p>
